innomcp-node/tmp_chat_test_out.txt
FAIL tests/unit/__tests__/chat.test.ts
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation, specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\Users\USER-NT\DEV\innomcp\innomcp-node\node_modules\unified\index.js:1
    export {unified} from './lib/index.js'
    ^^^^^^

    SyntaxError: Unexpected token 'export'

    [0m [90m  7 |[39m [36mimport[39m fs [36mfrom[39m [32m"fs"[39m[33m;[39m
     [90m  8 |[39m [36mimport[39m [33mAjv[39m [36mfrom[39m [32m"ajv"[39m[33m;[39m
    [31m[1m>[22m[39m[90m  9 |[39m [36mimport[39m { unified } [36mfrom[39m [32m"unified"[39m[33m;[39m
     [90m    |[39m [31m[1m^[22m[39m
     [90m 10 |[39m [36mimport[39m remarkParse [36mfrom[39m [32m"remark-parse"[39m[33m;[39m
     [90m 11 |[39m [36mimport[39m remarkRehype [36mfrom[39m [32m"remark-rehype"[39m[33m;[39m
     [90m 12 |[39m [36mimport[39m rehypeStringify [36mfrom[39m [32m"rehype-stringify"[39m[33m;[39m[0m

      at Runtime.createScriptFromCode (../node_modules/jest-runtime/build/index.js:1318:40)
      at Object.<anonymous> (src/utils/mcp/mcpclient.ts:9:1)
      at Object.<anonymous> (src/routes/api/chat.ts:6:1)
      at tests/unit/__tests__/chat.test.ts:10:42
      at Object.<anonymous> (tests/unit/__tests__/chat.test.ts:9:1)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        4.268 s
Ran all test suites matching tests/unit/__tests__/chat.test.ts.
(node:35816) Warning: `--localstorage-file` was provided without a valid path
(Use `node --trace-warnings ...` to show where the warning was created)
